src/main/java/com/example/dev2taskmanager/errors/TaskNotFoundException.java
package com.example.dev2taskmanager.errors;

public class TaskNotFoundException extends TaskManagerException {
    public TaskNotFoundException( CustomErrorCode errorCode ) {
        super(errorCode);
    }
}
